fixed search bug squishing pokemon

--- a/src/components/pokemonItem.css
+++ b/src/components/pokemonItem.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     border: 1px solid red;
-    width: 40%;
+    width: 150px;
     height: 250px;
     line-height: .25rem;
     margin: 1rem;
