--- a/src/components/pokemonList.css
+++ b/src/components/pokemonList.css
@@ -3,5 +3,4 @@ ul.pokedex {
     flex-wrap: wrap;
     margin: 0;
     padding: 0;
-    justify-content: space-around;
 }
